tests/anp_bad_path_test_5/anp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: egress-udp
spec:
  priority: 7
  subject:  # subject error : contains two fields
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  egress:
  - name: "allow-to-ravenclaw-everything"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-to-ravenclaw-everything"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-to-ravenclaw-everything"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-to-slytherin-at-port-5353"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "pass-to-slytherin-at-port-5353"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "allow-to-gryffindor-at-port-53"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    ports:
      - portNumber:
          protocol: UDP
          port: 53
  - name: "deny-to-gryffindor-everything-else"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
